Add initial notebook

--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 2/0_nearest-neighbors-features-and-metrics_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 2/0_nearest-neighbors-features-and-metrics_blank.ipynb
@@ -46,11 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.0.1 started. Logging: /tmp/graphlab_server_1468968361.log\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://turi.com/buy/.\n"
+     ]
+    }
+   ],
    "source": [
     "import graphlab\n",
     "import matplotlib.pyplot as plt\n",
