--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 2/0_nearest-neighbors-features-and-metrics_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 2/0_nearest-neighbors-features-and-metrics_blank.ipynb
@@ -1353,12 +1353,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 40),\n",
+       " ('in', 30),\n",
+       " ('and', 21),\n",
+       " ('of', 18),\n",
+       " ('to', 14),\n",
+       " ('his', 11),\n",
+       " ('act', 8),\n",
+       " ('he', 7),\n",
+       " ('a', 7),\n",
+       " ('as', 6)]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "obama_w = set(wiki[wiki['name']=='Barack Obama']['word_count'][0].keys())\n",
+    "bush_w = set(wiki[wiki['name']=='George W. Bush']['word_count'][0].keys())\n",
+    "common_obama_bush = obama_w.intersection(bush_w)\n",
+    "obama_top = {key:value for key, value in wiki[wiki['name']=='Barack Obama']['word_count'][0].items() if key in common_obama_bush}\n",
+    "obama_top = sorted(obama_top.items(), key=operator.itemgetter(1), reverse=True)[0:10]\n",
+    "obama_top"
+   ]
   },
   {
    "cell_type": "markdown",
