--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
@@ -43,11 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: /tmp/graphlab_server_1469568759.log\n"
+     ]
+    }
+   ],
    "source": [
     "import graphlab\n",
     "import matplotlib.pyplot as plt\n",
@@ -79,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -172,11 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<59071x547979 sparse matrix of type '<type 'numpy.float64'>'\n",
+       "\twith 10379283 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf_idf"
    ]
@@ -221,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -316,11 +343,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.41000789  1.36894636]\n",
+      " [ 1.40935215  1.41023886]\n",
+      " [ 1.39855967  1.40890299]\n",
+      " ..., \n",
+      " [ 1.41108296  1.39123646]\n",
+      " [ 1.41022804  1.31468652]\n",
+      " [ 1.39899784  1.41072448]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import pairwise_distances\n",
     "\n",
@@ -349,22 +390,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Students should write code here"
+    "# Students should write code here\n",
+    "centroids = tf_idf[0:2,:]\n",
+    "\n",
+    "distances = pairwise_distances(tf_idf, centroids, metric='euclidean')\n",
+    "dist = distances[430, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
    "source": [
     "'''Test cell'''\n",
     "if np.allclose(dist, pairwise_distances(tf_idf[430,:], tf_idf[1,:])):\n",
