--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
@@ -390,14 +390,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Students should write code here\n",
-    "centroids = tf_idf[0:2,:]\n",
+    "centroids = tf_idf[0:3,:]\n",
     "\n",
     "distances = pairwise_distances(tf_idf, centroids, metric='euclidean')\n",
     "dist = distances[430, 1]"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -439,13 +439,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.40979556,  1.40713107,  1.41002215])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Students should write code here"
+    "# Students should write code here\n",
+    "# closest_cluster = \n",
+    "distances[430,:]"
    ]
   },
   {
