Passing checkpoint 3 (clustering assignment)

--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
@@ -482,22 +482,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Students should write code here"
+    "# Students should write code here\n",
+    "centroids = tf_idf[0:3,:]\n",
+    "distances = pairwise_distances(tf_idf, centroids, metric='euclidean')\n",
+    "cluster_assignment = np.argmin(distances, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
    "source": [
     "if len(cluster_assignment)==59071 and \\\n",
     "   np.array_equal(np.bincount(cluster_assignment), np.array([23061, 10086, 25924])):\n",
