Passing checkpoint 4 (clustering assignment)

--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -536,11 +536,11 @@
     "    \n",
     "    # Compute distances between each data point and the set of centroids:\n",
     "    # Fill in the blank (RHS only)\n",
-    "    distances_from_centroids = ...\n",
+    "    distances_from_centroids = pairwise_distances(data, centroids, metric='euclidean')\n",
     "    \n",
     "    # Compute cluster assignments for each data point:\n",
     "    # Fill in the blank (RHS only)\n",
-    "    cluster_assignment = ...\n",
+    "    cluster_assignment = np.argmin(distances_from_centroids, axis = 1)\n",
     "    \n",
     "    return cluster_assignment"
    ]
@@ -554,11 +554,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
    "source": [
     "if np.allclose(assign_clusters(tf_idf[0:100:10], tf_idf[0:8:2]), np.array([0, 1, 1, 0, 0, 2, 0, 2, 2, 1])):\n",
     "    print('Pass')\n",
