Answering quizz question

--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 3/2_kmeans-with-text-data_blank.ipynb
@@ -1229,6 +1229,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([19595, 10427, 29049])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.bincount(cluster_assignment)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
